// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BisectDialog component renders 1`] = `
<Blueprint3.Dialog
  canOutsideClickClose={true}
  className="dialog-add-version"
  isOpen={false}
  onClose={[Function]}
  title="Start a bisect session"
>
  <div
    className="bp3-dialog-body"
  >
    <Blueprint3.Callout
      style={
        Object {
          "marginBottom": "1rem",
          "marginTop": 0,
        }
      }
    >
      <p>
        A "bisect" is a popular method
         
        <a
          href="https://git-scm.com/docs/git-bisect"
          rel="noreferrer"
          target="_blank"
        >
          borrowed from 
          <code>
            git
          </code>
        </a>
         
        for learning which version of Electron introduced a bug. This tool helps you perform a bisect.
      </p>
      <Blueprint3.Button
        icon="help"
        onClick={[Function]}
        text="Show help"
      />
    </Blueprint3.Callout>
    <Component>
      Earliest Version (Last "known good" version)
      <Blueprint3.ButtonGroup
        fill={true}
      >
        <VersionSelect
          appState={
            Object {
              "channelsToShow": Array [
                "Stable",
              ],
              "versions": Array [
                "1.0.0 local ready",
                "2.0.0 local ready",
                "3.0.0 local ready",
                "4.0.0 local ready",
                "5.0.0 local ready",
                "6.0.0 local ready",
                "7.0.0 local ready",
                "8.0.0 local ready",
                "9.0.0 local ready",
                "10.0.0 local ready",
              ],
              "versionsToShow": Array [
                "1.0.0 local ready",
                "2.0.0 local ready",
                "3.0.0 local ready",
                "4.0.0 local ready",
                "5.0.0 local ready",
                "6.0.0 local ready",
                "7.0.0 local ready",
                "8.0.0 local ready",
                "9.0.0 local ready",
                "10.0.0 local ready",
              ],
            }
          }
          currentVersion={
            Object {
              "source": "local",
              "state": "ready",
              "version": "4.0.0",
            }
          }
          itemDisabled={[Function]}
          onVersionSelect={[Function]}
        />
      </Blueprint3.ButtonGroup>
    </Component>
    <Component>
      Latest Version (First "known bad" version)
      <Blueprint3.ButtonGroup
        fill={true}
      >
        <VersionSelect
          appState={
            Object {
              "channelsToShow": Array [
                "Stable",
              ],
              "versions": Array [
                "1.0.0 local ready",
                "2.0.0 local ready",
                "3.0.0 local ready",
                "4.0.0 local ready",
                "5.0.0 local ready",
                "6.0.0 local ready",
                "7.0.0 local ready",
                "8.0.0 local ready",
                "9.0.0 local ready",
                "10.0.0 local ready",
              ],
              "versionsToShow": Array [
                "1.0.0 local ready",
                "2.0.0 local ready",
                "3.0.0 local ready",
                "4.0.0 local ready",
                "5.0.0 local ready",
                "6.0.0 local ready",
                "7.0.0 local ready",
                "8.0.0 local ready",
                "9.0.0 local ready",
                "10.0.0 local ready",
              ],
            }
          }
          currentVersion={
            Object {
              "source": "local",
              "state": "ready",
              "version": "1.0.0",
            }
          }
          itemDisabled={[Function]}
          onVersionSelect={[Function]}
        />
      </Blueprint3.ButtonGroup>
    </Component>
  </div>
  <div
    className="bp3-dialog-footer"
  >
    <div
      className="bp3-dialog-footer-actions"
    >
      <Blueprint3.Button
        disabled={false}
        icon="play"
        key="submit"
        onClick={[Function]}
        text="Begin"
      />
      <Blueprint3.Button
        disabled={false}
        icon="lab-test"
        key="auto"
        onClick={[Function]}
        text="Auto"
      />
      <Blueprint3.Button
        icon="cross"
        key="cancel"
        onClick={[Function]}
        text="Cancel"
      />
    </div>
  </div>
</Blueprint3.Dialog>
`;

exports[`BisectDialog component renders 2`] = `
<Blueprint3.Dialog
  canOutsideClickClose={true}
  className="dialog-add-version"
  isOpen={false}
  onClose={[Function]}
  title="Start a bisect session"
>
  <div
    className="bp3-dialog-body"
  >
    <Blueprint3.Callout
      style={
        Object {
          "marginBottom": "1rem",
          "marginTop": 0,
        }
      }
    >
      <p>
        A "bisect" is a popular method
         
        <a
          href="https://git-scm.com/docs/git-bisect"
          rel="noreferrer"
          target="_blank"
        >
          borrowed from 
          <code>
            git
          </code>
        </a>
         
        for learning which version of Electron introduced a bug. This tool helps you perform a bisect.
      </p>
      <Blueprint3.Button
        icon="help"
        onClick={[Function]}
        text="Show help"
      />
    </Blueprint3.Callout>
    <Component>
      Earliest Version (Last "known good" version)
      <Blueprint3.ButtonGroup
        fill={true}
      >
        <VersionSelect
          appState={
            Object {
              "channelsToShow": Array [
                "Stable",
              ],
              "versions": Array [
                "1.0.0 local ready",
                "2.0.0 local ready",
                "3.0.0 local ready",
                "4.0.0 local ready",
                "5.0.0 local ready",
                "6.0.0 local ready",
                "7.0.0 local ready",
                "8.0.0 local ready",
                "9.0.0 local ready",
                "10.0.0 local ready",
              ],
              "versionsToShow": Array [
                "1.0.0 local ready",
                "2.0.0 local ready",
                "3.0.0 local ready",
                "4.0.0 local ready",
                "5.0.0 local ready",
                "6.0.0 local ready",
                "7.0.0 local ready",
                "8.0.0 local ready",
                "9.0.0 local ready",
                "10.0.0 local ready",
              ],
            }
          }
          itemDisabled={[Function]}
          onVersionSelect={[Function]}
        />
      </Blueprint3.ButtonGroup>
    </Component>
    <Component>
      Latest Version (First "known bad" version)
      <Blueprint3.ButtonGroup
        fill={true}
      >
        <VersionSelect
          appState={
            Object {
              "channelsToShow": Array [
                "Stable",
              ],
              "versions": Array [
                "1.0.0 local ready",
                "2.0.0 local ready",
                "3.0.0 local ready",
                "4.0.0 local ready",
                "5.0.0 local ready",
                "6.0.0 local ready",
                "7.0.0 local ready",
                "8.0.0 local ready",
                "9.0.0 local ready",
                "10.0.0 local ready",
              ],
              "versionsToShow": Array [
                "1.0.0 local ready",
                "2.0.0 local ready",
                "3.0.0 local ready",
                "4.0.0 local ready",
                "5.0.0 local ready",
                "6.0.0 local ready",
                "7.0.0 local ready",
                "8.0.0 local ready",
                "9.0.0 local ready",
                "10.0.0 local ready",
              ],
            }
          }
          itemDisabled={[Function]}
          onVersionSelect={[Function]}
        />
      </Blueprint3.ButtonGroup>
    </Component>
  </div>
  <div
    className="bp3-dialog-footer"
  >
    <div
      className="bp3-dialog-footer-actions"
    >
      <Blueprint3.Button
        disabled={true}
        icon="play"
        key="submit"
        onClick={[Function]}
        text="Begin"
      />
      <Blueprint3.Button
        disabled={true}
        icon="lab-test"
        key="auto"
        onClick={[Function]}
        text="Auto"
      />
      <Blueprint3.Button
        icon="cross"
        key="cancel"
        onClick={[Function]}
        text="Cancel"
      />
    </div>
  </div>
</Blueprint3.Dialog>
`;

exports[`BisectDialog component renders 3`] = `
<Blueprint3.Dialog
  canOutsideClickClose={true}
  className="dialog-add-version"
  isOpen={false}
  onClose={[Function]}
  title="Start a bisect session"
>
  <div
    className="bp3-dialog-body"
  >
    <Blueprint3.Callout
      style={
        Object {
          "marginBottom": "1rem",
          "marginTop": 0,
        }
      }
    >
      <p>
        A "bisect" is a popular method
         
        <a
          href="https://git-scm.com/docs/git-bisect"
          rel="noreferrer"
          target="_blank"
        >
          borrowed from 
          <code>
            git
          </code>
        </a>
         
        for learning which version of Electron introduced a bug. This tool helps you perform a bisect.
      </p>
      <Blueprint3.Button
        icon="help"
        onClick={[Function]}
        text="Show help"
      />
    </Blueprint3.Callout>
    <Component>
      Earliest Version (Last "known good" version)
      <Blueprint3.ButtonGroup
        fill={true}
      >
        <VersionSelect
          appState={
            Object {
              "channelsToShow": Array [
                "Stable",
              ],
              "versions": Array [
                "1.0.0 local ready",
                "2.0.0 local ready",
                "3.0.0 local ready",
                "4.0.0 local ready",
                "5.0.0 local ready",
                "6.0.0 local ready",
                "7.0.0 local ready",
                "8.0.0 local ready",
                "9.0.0 local ready",
                "10.0.0 local ready",
              ],
              "versionsToShow": Array [
                "1.0.0 local ready",
                "2.0.0 local ready",
                "3.0.0 local ready",
                "4.0.0 local ready",
                "5.0.0 local ready",
                "6.0.0 local ready",
                "7.0.0 local ready",
                "8.0.0 local ready",
                "9.0.0 local ready",
                "10.0.0 local ready",
              ],
            }
          }
          currentVersion={
            Object {
              "source": "local",
              "state": "ready",
              "version": "4.0.0",
            }
          }
          itemDisabled={[Function]}
          onVersionSelect={[Function]}
        />
      </Blueprint3.ButtonGroup>
    </Component>
    <Component>
      Latest Version (First "known bad" version)
      <Blueprint3.ButtonGroup
        fill={true}
      >
        <VersionSelect
          appState={
            Object {
              "channelsToShow": Array [
                "Stable",
              ],
              "versions": Array [
                "1.0.0 local ready",
                "2.0.0 local ready",
                "3.0.0 local ready",
                "4.0.0 local ready",
                "5.0.0 local ready",
                "6.0.0 local ready",
                "7.0.0 local ready",
                "8.0.0 local ready",
                "9.0.0 local ready",
                "10.0.0 local ready",
              ],
              "versionsToShow": Array [
                "1.0.0 local ready",
                "2.0.0 local ready",
                "3.0.0 local ready",
                "4.0.0 local ready",
                "5.0.0 local ready",
                "6.0.0 local ready",
                "7.0.0 local ready",
                "8.0.0 local ready",
                "9.0.0 local ready",
                "10.0.0 local ready",
              ],
            }
          }
          itemDisabled={[Function]}
          onVersionSelect={[Function]}
        />
      </Blueprint3.ButtonGroup>
    </Component>
  </div>
  <div
    className="bp3-dialog-footer"
  >
    <div
      className="bp3-dialog-footer-actions"
    >
      <Blueprint3.Button
        disabled={true}
        icon="play"
        key="submit"
        onClick={[Function]}
        text="Begin"
      />
      <Blueprint3.Button
        disabled={true}
        icon="lab-test"
        key="auto"
        onClick={[Function]}
        text="Auto"
      />
      <Blueprint3.Button
        icon="cross"
        key="cancel"
        onClick={[Function]}
        text="Cancel"
      />
    </div>
  </div>
</Blueprint3.Dialog>
`;

exports[`BisectDialog component renders 4`] = `
<Blueprint3.Dialog
  canOutsideClickClose={true}
  className="dialog-add-version"
  isOpen={false}
  onClose={[Function]}
  title="Start a bisect session"
>
  <div
    className="bp3-dialog-body"
  >
    <Blueprint3.Callout
      style={
        Object {
          "marginBottom": "1rem",
          "marginTop": 0,
        }
      }
    >
      <p>
        A "bisect" is a popular method
         
        <a
          href="https://git-scm.com/docs/git-bisect"
          rel="noreferrer"
          target="_blank"
        >
          borrowed from 
          <code>
            git
          </code>
        </a>
         
        for learning which version of Electron introduced a bug. This tool helps you perform a bisect.
      </p>
      <Blueprint3.Button
        icon="help"
        onClick={[Function]}
        text="Show help"
      />
    </Blueprint3.Callout>
    <Component>
      Earliest Version (Last "known good" version)
      <Blueprint3.ButtonGroup
        fill={true}
      >
        <VersionSelect
          appState={
            Object {
              "channelsToShow": Array [
                "Stable",
              ],
              "versions": Array [
                "1.0.0 local ready",
                "2.0.0 local ready",
                "3.0.0 local ready",
                "4.0.0 local ready",
                "5.0.0 local ready",
                "6.0.0 local ready",
                "7.0.0 local ready",
                "8.0.0 local ready",
                "9.0.0 local ready",
                "10.0.0 local ready",
              ],
              "versionsToShow": Array [
                "1.0.0 local ready",
                "2.0.0 local ready",
                "3.0.0 local ready",
                "4.0.0 local ready",
                "5.0.0 local ready",
                "6.0.0 local ready",
                "7.0.0 local ready",
                "8.0.0 local ready",
                "9.0.0 local ready",
                "10.0.0 local ready",
              ],
            }
          }
          currentVersion={
            Object {
              "source": "local",
              "state": "ready",
              "version": "4.0.0",
            }
          }
          itemDisabled={[Function]}
          onVersionSelect={[Function]}
        />
      </Blueprint3.ButtonGroup>
    </Component>
    <Component>
      Latest Version (First "known bad" version)
      <Blueprint3.ButtonGroup
        fill={true}
      >
        <VersionSelect
          appState={
            Object {
              "channelsToShow": Array [
                "Stable",
              ],
              "versions": Array [
                "1.0.0 local ready",
                "2.0.0 local ready",
                "3.0.0 local ready",
                "4.0.0 local ready",
                "5.0.0 local ready",
                "6.0.0 local ready",
                "7.0.0 local ready",
                "8.0.0 local ready",
                "9.0.0 local ready",
                "10.0.0 local ready",
              ],
              "versionsToShow": Array [
                "1.0.0 local ready",
                "2.0.0 local ready",
                "3.0.0 local ready",
                "4.0.0 local ready",
                "5.0.0 local ready",
                "6.0.0 local ready",
                "7.0.0 local ready",
                "8.0.0 local ready",
                "9.0.0 local ready",
                "10.0.0 local ready",
              ],
            }
          }
          currentVersion={
            Object {
              "source": "local",
              "state": "ready",
              "version": "5.0.0",
            }
          }
          itemDisabled={[Function]}
          onVersionSelect={[Function]}
        />
      </Blueprint3.ButtonGroup>
    </Component>
  </div>
  <div
    className="bp3-dialog-footer"
  >
    <div
      className="bp3-dialog-footer-actions"
    >
      <Blueprint3.Button
        disabled={true}
        icon="play"
        key="submit"
        onClick={[Function]}
        text="Begin"
      />
      <Blueprint3.Button
        disabled={true}
        icon="lab-test"
        key="auto"
        onClick={[Function]}
        text="Auto"
      />
      <Blueprint3.Button
        icon="cross"
        key="cancel"
        onClick={[Function]}
        text="Cancel"
      />
    </div>
  </div>
</Blueprint3.Dialog>
`;

exports[`BisectDialog component renders 5`] = `
<Blueprint3.Dialog
  canOutsideClickClose={true}
  className="dialog-add-version"
  isOpen={false}
  onClose={[Function]}
  title="Start a bisect session"
>
  <div
    className="bp3-dialog-body"
  >
    <Blueprint3.Callout
      style={
        Object {
          "marginBottom": "1rem",
          "marginTop": 0,
        }
      }
    >
      <p>
        A "bisect" is a popular method
         
        <a
          href="https://git-scm.com/docs/git-bisect"
          rel="noreferrer"
          target="_blank"
        >
          borrowed from 
          <code>
            git
          </code>
        </a>
         
        for learning which version of Electron introduced a bug. This tool helps you perform a bisect.
      </p>
      <p>
        First, write a fiddle that reproduces a bug or an issue. Then, select the earliest version to start your search with. Typically, that's the "last known good" version that did not have the bug. Then, select that latest version to end the search with, usually the "first known bad" version.
      </p>
      <p>
        Once you begin your bisect, Fiddle will run your fiddle with a number of Electron versions, closing in on the version that introduced the bug. Once completed, you will know which Electron version introduced your issue.
      </p>
    </Blueprint3.Callout>
    <Component>
      Earliest Version (Last "known good" version)
      <Blueprint3.ButtonGroup
        fill={true}
      >
        <VersionSelect
          appState={
            Object {
              "channelsToShow": Array [
                "Stable",
              ],
              "versions": Array [
                "1.0.0 local ready",
                "2.0.0 local ready",
                "3.0.0 local ready",
                "4.0.0 local ready",
                "5.0.0 local ready",
                "6.0.0 local ready",
                "7.0.0 local ready",
                "8.0.0 local ready",
                "9.0.0 local ready",
                "10.0.0 local ready",
              ],
              "versionsToShow": Array [
                "1.0.0 local ready",
                "2.0.0 local ready",
                "3.0.0 local ready",
                "4.0.0 local ready",
                "5.0.0 local ready",
                "6.0.0 local ready",
                "7.0.0 local ready",
                "8.0.0 local ready",
                "9.0.0 local ready",
                "10.0.0 local ready",
              ],
            }
          }
          currentVersion={
            Object {
              "source": "local",
              "state": "ready",
              "version": "4.0.0",
            }
          }
          itemDisabled={[Function]}
          onVersionSelect={[Function]}
        />
      </Blueprint3.ButtonGroup>
    </Component>
    <Component>
      Latest Version (First "known bad" version)
      <Blueprint3.ButtonGroup
        fill={true}
      >
        <VersionSelect
          appState={
            Object {
              "channelsToShow": Array [
                "Stable",
              ],
              "versions": Array [
                "1.0.0 local ready",
                "2.0.0 local ready",
                "3.0.0 local ready",
                "4.0.0 local ready",
                "5.0.0 local ready",
                "6.0.0 local ready",
                "7.0.0 local ready",
                "8.0.0 local ready",
                "9.0.0 local ready",
                "10.0.0 local ready",
              ],
              "versionsToShow": Array [
                "1.0.0 local ready",
                "2.0.0 local ready",
                "3.0.0 local ready",
                "4.0.0 local ready",
                "5.0.0 local ready",
                "6.0.0 local ready",
                "7.0.0 local ready",
                "8.0.0 local ready",
                "9.0.0 local ready",
                "10.0.0 local ready",
              ],
            }
          }
          currentVersion={
            Object {
              "source": "local",
              "state": "ready",
              "version": "5.0.0",
            }
          }
          itemDisabled={[Function]}
          onVersionSelect={[Function]}
        />
      </Blueprint3.ButtonGroup>
    </Component>
  </div>
  <div
    className="bp3-dialog-footer"
  >
    <div
      className="bp3-dialog-footer-actions"
    >
      <Blueprint3.Button
        disabled={true}
        icon="play"
        key="submit"
        onClick={[Function]}
        text="Begin"
      />
      <Blueprint3.Button
        disabled={true}
        icon="lab-test"
        key="auto"
        onClick={[Function]}
        text="Auto"
      />
      <Blueprint3.Button
        icon="cross"
        key="cancel"
        onClick={[Function]}
        text="Cancel"
      />
    </div>
  </div>
</Blueprint3.Dialog>
`;
